--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_name: Autonomous Empirical Research
 
 theme:
   name: material
-  custom_dir: docs/overrides
+  custom_dir: mkdocs/overrides
 
 watch:
   - autora/
@@ -13,7 +13,7 @@ plugins:
   - search
   - gen-files:
       scripts:
-        - docs/gen_ref_pages.py
+        - mkdocs/_gen_ref_pages.py
   - literate-nav:
         nav_file: SUMMARY.md
   - section-index
@@ -41,37 +41,36 @@ extra_javascript:
 nav:
 - Introduction: 'index.md'
 - Experimentalists:
-    - Overview: 'example/pipeline/Experimentalist Pipeline Examples.ipynb'
+  - Overview: 'pipeline/Experimentalist Pipeline Examples.ipynb'
 - Synthetic Experiments:
-    - Inventory: 'example/synthetic/inventory.ipynb'
+  - Inventory: 'synthetic/inventory.ipynb'
 - Theorists:
-  - Overview: 'example/theorist/overview.md'
+  - Overview: 'theorist/overview.md'
   - DARTS:
-      - Introduction: 'example/theorist/darts/introduction.md'
-      - How it works: 'example/theorist/darts/how_it_works.md'
-      - Meta parameters: 'example/theorist/darts/meta_parameters.md'
-      - Search space: 'example/theorist/darts/search_space.md'
-      - Examples:
-        - Basic Usage: 'example/theorist/darts/example.ipynb'
-        - Weber-Fechner Law: 'example/theorist/darts/weber.ipynb'
-  - BMS:
-      - Introduction: 'example/theorist/bms/introduction.md'
-      - How it works: 'example/theorist/bms/how_it_works.md'
-      - Meta parameters: 'example/theorist/bms/meta_parameters.md'
-      - Search space: 'example/theorist/bms/search_space.ipynb'
-      - Examples:
-        - Basic Usage: 'example/theorist/bms/example.ipynb'
-        - Weber-Fechner Law: 'example/theorist/bms/weber.ipynb'
-  - BSR: 'example/theorist/bsr/bsr.ipynb'
-- Cycle:
-    - Scoring:
-      - Logistic Regression: 'example/cycle/cycle_scoring.ipynb'
-      - BMS: 'example/cycle/cycle_scoring_bms.ipynb'
-    - Plotting: 'example/cycle/cycle_results_plots.ipynb'
+    - Introduction: 'theorist/darts/introduction.md'
+    - How it works: 'theorist/darts/how_it_works.md'
+    - Meta parameters: 'theorist/darts/meta_parameters.md'
+    - Search space: 'theorist/darts/search_space.md'
     - Examples:
-      - DARTS & BMS: 'example/cycle/simple_cycle_bms_darts.ipynb'
-      - BMS & Poppernet: 'example/cycle/simple_cycle_bms_model_poppernet.ipynb'
-      - Uncertainty Experimentalist: 'example/cycle/simple_cycle_uncertainty_experimentalist.ipynb'
-
+      - Basic Usage: 'theorist/darts/example.ipynb'
+      - Weber-Fechner Law: 'theorist/darts/weber.ipynb'
+  - BMS:
+    - Introduction: 'theorist/bms/introduction.md'
+    - How it works: 'theorist/bms/how_it_works.md'
+    - Meta parameters: 'theorist/bms/meta_parameters.md'
+    - Search space: 'theorist/bms/search_space.ipynb'
+    - Examples:
+      - Basic Usage: 'theorist/bms/example.ipynb'
+      - Weber-Fechner Law: 'theorist/bms/weber.ipynb'
+  - BSR: 'theorist/bsr/bsr.ipynb'
+- Cycle:
+  - Scoring:
+    - Logistic Regression: 'cycle/cycle_scoring.ipynb'
+    - BMS: 'cycle/cycle_scoring_bms.ipynb'
+  - Plotting: 'cycle/cycle_results_plots.ipynb'
+  - Examples:
+    - DARTS & BMS: 'cycle/simple_cycle_bms_darts.ipynb'
+    - BMS & Poppernet: 'cycle/simple_cycle_bms_model_poppernet.ipynb'
+    - Uncertainty Experimentalist: 'cycle/simple_cycle_uncertainty_experimentalist.ipynb'
 - Code Reference: reference/autora/  #
 
